# doctring-formatter

./: README.md  pyproject.toml
src/docstring_formatter/: cli.py
